fix(Storybook): Restore other body backgrounds, e.g. for inverse and contrast

--- a/storybook/src/_styles/overrides.css
+++ b/storybook/src/_styles/overrides.css
@@ -140,8 +140,8 @@
 }
 
 /* Remove the grey body background in Compact Mode from the story canvas. */
-.ams-body._ams-body--storybook {
-  background-color: transparent;
+._ams-body--storybook {
+  --ams-body-background-color: transparent;
 }
 
 /* Override to make sure the default transparent border isn't shown in forced colors mode. */
